--- a/custom_components/immich_slideshow/manifest.json
+++ b/custom_components/immich_slideshow/manifest.json
@@ -6,6 +6,6 @@
   "documentation": "https://github.com/user/immich_slideshow",
   "integration_type": "hub",
   "iot_class": "cloud_polling",
-  "requirements": ["requests>=2.28.0"],
-  "version": "1.0.0"
+  "requirements": ["requests>=2.28.0", "Pillow>=8.0.0"],
+  "version": "1.0.1"
 }
